<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Theme">

        <ListPreference
            app:defaultValue="@string/dark_mode_disabled"
            app:entries="@array/night_mode_entries"
            app:entryValues="@array/night_mode_values"
            app:iconSpaceReserved="false"
            app:key="@string/dark_mode_key"
            app:title="@string/dark_mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Notifications">

        <SwitchPreferenceCompat
            android:defaultValue="@bool/notification_enabled_default"
            android:key="notifications_mode"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:title="Notifications"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/notification_options_value_default"
            android:key="notifications_time"
            android:dependency="notifications_mode"
            android:dialogTitle="Notification Time"
            android:entries="@array/notification_options_text"
            android:entryValues="@array/notification_options_values"
            android:summary="Time for notifications: %s"
            android:title="Notification time"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Interface">

        <SwitchPreferenceCompat
            android:defaultValue="@bool/enable_swipe_default"
            android:key="@string/enable_swipe_key"
            android:summaryOff="@string/enable_swipe_off"
            android:summaryOn="@string/enable_swipe_on"
            android:title="@string/enable_swipe_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/task_delete_confirm_default"
            android:key="@string/task_delete_confirm_key"
            android:summaryOff="@string/task_delete_confirm_off"
            android:summaryOn="@string/task_delete_confirm_on"
            android:title="@string/task_delete_confirm_title"
            app:iconSpaceReserved="false" />


    </PreferenceCategory>


</PreferenceScreen>