<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_group_1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_nav_pinned"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_nav_archive"
            android:title="@string/menu_archive" />

    </group>

    <group android:id="@+id/nav_group_2" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings_text" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_nav_contacts"
            android:title="@string/menu_contacts" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_nav_share"
            android:title="@string/menu_share" />
    </group>

</menu>