<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.muralex.achiever.presentation.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.muralex.achiever.presentation.fragments.pinned.DashboardFragment"
        android:label="@string/menu_dashboard" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.muralex.achiever.presentation.fragments.archive.ArchiveFragment"
        android:label="@string/menu_archive"/>

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.muralex.achiever.presentation.fragments.contacts.ContactsFragment"
        android:label="@string/menu_contacts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.muralex.achiever.presentation.fragments.settings.SettingsFragment"
        android:label="@string/nav_settings_text" />


</navigation>