<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/ll_action_move_top"
            style="@style/ActionDialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <View
                android:id="@+id/top_space_1"
                android:layout_width="match_parent"
                android:layout_height="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_move_top" />

                <TextView
                    style="@style/DialogActionItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_move_to_top" />

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_action_view"
            style="@style/ActionDialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <View
                android:visibility="gone"
                android:id="@+id/top_space_2"
                android:layout_width="match_parent"
                android:layout_height="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_open" />

                <TextView
                    style="@style/DialogActionItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_open" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_edit"
            style="@style/ActionDialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_edit" />

                <TextView
                    style="@style/DialogActionItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_edit" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_archive"
            style="@style/ActionDialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingBottom="18dp"
            >

            <ImageView
                android:id="@+id/iv_archive_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_action_archive" />

            <TextView
                android:id="@+id/tv_archive_text"
                style="@style/DialogActionItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_archive" />

        </LinearLayout>





    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>